# duck

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Makefile  README.md  pyproject.toml
apps/: __init__.py  chat_cli.py  voice_loop.py
apps/staff_panel/: __init__.py
duckbrain/: __init__.py  config.py
duckbrain/audio/: __init__.py
duckbrain/bus/: __init__.py  broker.py  client.py  protocol.py  schemas.py
duckbrain/llm/: __init__.py  bootstrap.py  client.py  persona.py
duckbrain/memory/: __init__.py  store.py  summariser.py
duckbrain/safety/: __init__.py
tests/: test_bootstrap.py  test_bus.py  test_client.py  test_config.py  test_persona.py  test_schemas.py  test_store.py  test_summariser.py
tests/eval/: __init__.py  test_persona_redteam.py
