[project]
name = "duckbrain"
version = "0.1.0"
description = "Companion Duck brain: on-device conversational companion robot for aged care."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["duckbrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["duckbrain", "apps", "tests"]

[[tool.mypy.overrides]]
# pytest-asyncio decorators are dynamically typed; allow untyped decorators in tests.
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
